src/css/components/forms/_icon-input.scss
.icon-input{
    position:relative;

    .fa{
        position:absolute;
        left:0;
        top:0;
        height:$size-8;
        width:$size-8;
        background:$third-color;
        text-align:center;
        padding-top:$size-2;
    }

    input, select, textarea{
        width:100%;
        height:$size-8;
    }

    input, textarea{
        text-indent:$size-8;
    }

    select {
       padding-left: $size-9;
    }

    &.combo{
        input, select, textarea{
            float:left;
            margin-top:0;
            width:25%;

            &:last-child{
                width:75%;
            }
        }
        
        input:last-child{
            text-indent:$size-3;
        }

        select:last-child{
            padding-left:$size-3;
        }
    }
}

